--- a/style.css
+++ b/style.css
@@ -1,3 +1,5 @@
+@import url('https://fonts.googleapis.com/css2?family=Roboto:wght@100;200;300;400;500;600;700;800;900&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Roboto+Slab:wght@100;200;300;400;500;600;700;800;900&display=swap');
 /* Murad start*/
 footer {
     height: 390px;
@@ -521,10 +523,6 @@ position: relative;
 
 
 /* Shovgu */
-
-@import url('https://fonts.googleapis.com/css2?family=Roboto:wght@100;200;300;400;500;600;700;800;900&display=swap');
-@import url('https://fonts.googleapis.com/css2?family=Roboto+Slab:wght@100;200;300;400;500;600;700;800;900&display=swap');
-
 .section-1 {
     margin-left: 120px;
     margin-top: 20px;
@@ -688,7 +686,26 @@ h1 {
         margin-top: 195px;
         margin-left: -160px;
     }
-
+    .second-part{
+        justify-content: space-between;
+    }
+    .third-part{
+        width: 280.11px;
+        height: 115.83px;
+        margin-left: 180px;
+    }
+    .third-part p{
+        width: 220.38px;
+        height: 65.45px;
+        font-weight: 400;
+        font-size: 14px;
+        padding-left: 15px;
+        padding-top: 15px;
+    }
+    .name{
+        margin-left: 135px;
+        margin-top: -25px;
+    }
 }
 @media screen and (min-width:320px) and (max-width:991px){
     .section-1{
@@ -823,7 +840,7 @@ h3 {
     width: 366px;
     height: 59px;
     margin-left: -570px;
-    margin-top: 550px;
+    margin-top: 490px;
 }
 
 .image-4 {
@@ -870,13 +887,13 @@ h3 {
     .image-4{
         width: 181.86px;
         height: 182.44px; 
-        margin-top: 110px;
+        margin-top: 205px;
     }
     .image-5{
         width: 211.98px;
         height: 34.17px;
-        margin-top: 325px;
-        margin-left: -355px;
+        margin-top: 415px;
+        margin-left: -345px;
     }
     .photo-1{
         width: 134.37px;
@@ -932,7 +949,7 @@ h3 {
     .image-5{
         width: 170.55px;
         height: 27.49px;
-        margin-top: 0px;
+        margin-top: -5px;
         margin-left: 60px;
     }
     .image-6,.image-8{
@@ -961,10 +978,8 @@ h3 {
     }
     
 }
-/* Mehemmed */
 
 /* Shovgu end*/
-
 
 
 
@@ -975,17 +990,12 @@ h3 {
     width: 667px;
     height: 93px;
     margin-left: 100px;
-
-
     font-family: 'Roboto Slab';
     font-style: normal;
     font-weight: 700;
     font-size: 55px;
     line-height: 101.38%;
-    /* or 56px */
-
     color: #000000;
-
 }
 
 .head1 {
@@ -993,16 +1003,11 @@ h3 {
     width: 150px;
     height: 39px;
     margin-left: 100px;
-
-
     font-family: 'Roboto';
     font-style: normal;
     font-weight: 700;
     font-size: 25px;
     line-height: 130%;
-    /* or 32px */
-
-
     color: #1E4681;
 }
 
@@ -1011,16 +1016,11 @@ h3 {
     width: 214px;
     height: 39px;
     margin-left: 100px;
-
-
     font-family: 'Roboto';
     font-style: normal;
     font-weight: 700;
     font-size: 25px;
     line-height: 130%;
-    /* or 32px */
-
-
     color: #1E4681;
 
 }
@@ -1030,16 +1030,11 @@ h3 {
     width: 150px;
     height: 39px;
     margin-left: 100px;
-
-
     font-family: 'Roboto';
     font-style: normal;
     font-weight: 700;
     font-size: 25px;
     line-height: 130%;
-    /* or 32px */
-
-
     color: #1E4681;
 
 }
@@ -1049,16 +1044,11 @@ h3 {
     width: 223px;
     height: 39px;
     margin-left: 100px;
-
-
     font-family: 'Roboto';
     font-style: normal;
     font-weight: 400;
     font-size: 18px;
     line-height: 130%;
-    /* or 23px */
-
-
     color: #000000;
 
 }
@@ -1068,16 +1058,11 @@ h3 {
     width: 271px;
     height: 109px;
     margin-left: 100px;
-
-
     font-family: 'Roboto';
     font-style: normal;
     font-weight: 400;
     font-size: 18px;
     line-height: 130%;
-    /* or 23px */
-
-
     color: #000000;
 }
 
@@ -1086,16 +1071,11 @@ h3 {
     width: 245px;
     height: 39px;
     margin-left: 100px;
-
-
     font-family: 'Roboto';
     font-style: normal;
     font-weight: 400;
     font-size: 18px;
     line-height: 130%;
-    /* or 23px */
-
-
     color: #000000;
 }
 
@@ -1104,16 +1084,11 @@ h3 {
     width: 667px;
     height: 93px;
     margin-left: 100px;
-
-
     font-family: 'Roboto Slab';
     font-style: normal;
     font-weight: 700;
     font-size: 55px;
     line-height: 101.38%;
-    /* or 56px */
-
-
     color: #000000;
 }
 
@@ -1122,23 +1097,280 @@ h3 {
     width: 662px;
     height: 374px;
     margin-left: 100px;
-
-
     font-family: 'Roboto';
     font-style: normal;
     font-weight: 400;
     font-size: 24px;
     line-height: 150%;
-    /* or 36px */
-
-
     color: #000000;
-
 }
 
 .flex {
     display: flex;
 }
+@media screen and (min-width:992px) and (max-width:1279px){
+    .red1{
+        width: 386.3px;
+        height: 53.86px;
+        margin-left: 70.08px;
+        font-family: 'Roboto Slab';
+        font-style: normal;
+        font-weight: 700;
+        font-size: 32px;
+        line-height: 101.38%;
+        color: #000000;
+    }
+    
+    .head1{
+    
+        width: 86.88px;
+        height: 22.59px;
+        margin-left: 70.66px;
+        margin-right: 46px;
+        font-family: 'Roboto';
+        font-style: normal;
+        font-weight: 700;
+        font-size: 15px;
+        line-height: 130%;
+        color: #1E4681;
+    
+    }
+    .blok1{
+        width: 153px;
+        height: 22px;
+        margin-left: 71px;   
+        font-family: 'Roboto';
+        font-style: normal;
+        font-weight: 400;
+        font-size: 11px;
+        line-height: 130%;
+        color: #000000;
+        margin-right: 46px;
+    }
+    .head2{
+
+        width: 123.94px;
+        height: 22.59px;
+        margin-right: 50,87;
+        font-family: 'Roboto';
+        font-style: normal;
+        font-weight: 700;
+        font-size: 15px;
+        line-height: 130%;
+        color: #1E4681;
+    }
+    .blok2{
+    
+        width: 172px;
+        height: 63px;
+        margin-right: 50,87;
+        font-family: 'Roboto';
+        font-style: normal;
+        font-weight: 400;
+        font-size: 11px;
+        line-height: 130%;
+        color: #000000;
+    }
+    
+    .head3{
+        width: 86.88px;
+        height: 22.59px;
+        font-family: 'Roboto';
+        font-style: normal;
+        font-weight: 700;
+        font-size: 15px;
+        line-height: 130%;
+        color: #1E4681;
+    }
+    
+    .blok3{
+    
+        width: 141.9px;
+        height: 22.59px;
+        font-family: 'Roboto';
+        font-style: normal;
+        font-weight: 400;
+        font-size: 11px;
+        line-height: 130%;
+        color: #000000;
+    }
+    .bas1{
+        width: 386.3px;
+        height: 53.86px;
+        margin-left: 70.08px;  
+        font-family: 'Roboto Slab';
+        font-style: normal;
+        font-weight: 700;
+        font-size: 32px;
+        line-height: 101.38%;
+        color: #000000;
+    }
+    
+    .bas2{
+        width: 383.41px;
+        height: 216.61px;
+        margin-left: 79.92px;
+        font-family: 'Roboto';
+        font-style: normal;
+        font-weight: 400;
+        font-size: 14px;
+        line-height: 150%;
+        color: #000000;
+    }
+    
+    }
+    @media screen and (min-width:320px) and (max-width:991px){
+    .red1{
+    
+        width: 310.8px;
+    height: 43.34px;
+    margin-left: 36px;
+    
+    font-family: 'Roboto Slab';
+    font-style: normal;
+    font-weight: 700;
+    font-size: 26px;
+    line-height: 101.38%;
+    /* or 26px */
+    color: #000000;
+    
+    }
+    .head1{
+        width: 69.9px;
+        height: 18.17px;
+        margin-left: 35px;
+     
+        
+        font-family: 'Roboto';
+        font-style: normal;
+        font-weight: 700;
+        font-size: 12px;
+        line-height: 130%;
+        /* or 16px */
+        color: #1E4681;
+    }
+    .head2{
+        width: 99.72px;
+        height: 18.17px;
+        margin-left: 35.38px;
+       
+        
+        font-family: 'Roboto';
+        font-style: normal;
+        font-weight: 700;
+        font-size: 12px;
+        line-height: 130%;
+        /* or 16px */
+        
+        
+        color: #1E4681;
+    
+    
+    }
+    .blok1{
+    
+        width: 180px;
+        height: 48px;
+        margin-left: 35px;
+        font-family: 'Roboto';
+        font-style: normal;
+        font-weight: 400;
+        font-size: 10px;
+        line-height: 130%;
+        /* or 13px */
+        
+        
+        color: #000000;
+    
+    }
+    .blok2{
+    
+        width: 165px;
+        height: 51px;
+        margin-left: 35px;
+        font-family: 'Roboto';
+        font-style: normal;
+        font-weight: 400;
+        font-size: 10px;
+        line-height: 130%;
+        /* or 13px */
+        color: #000000;
+        
+    
+    }
+    
+    .head3{
+    
+        width: 69.9px;
+        height: 18.17px;
+        margin-left: 36px;
+    
+        
+        font-family: 'Roboto';
+        font-style: normal;
+        font-weight: 700;
+        font-size: 12px;
+        line-height: 130%;
+        /* or 16px */
+        
+        
+        color: #1E4681;
+        
+    
+    }
+    .blok3{
+        width: 159px;
+        height: 31px;
+        margin-left: 36px;
+        font-family: 'Roboto';
+        font-style: normal;
+        font-weight: 400;
+        font-size: 10px;
+        line-height: 130%;
+        /* or 13px */    
+        color: #000000;
+        
+    }
+    
+    .flex{
+        display: inline;
+    }
+    
+    .bas1{
+        width: 310.8px;
+        height: 43.34px;
+        margin-left: 36px;
+    
+        
+        font-family: 'Roboto Slab';
+        font-style: normal;
+        font-weight: 700;
+        font-size: 26px;
+        line-height: 101.38%;
+        /* or 26px */
+        
+        
+        color: #000000;
+    
+    
+    }
+    .bas2{
+        width: 299px;
+        height: 174px;
+        margin-left: 44px;
+        font-family: 'Roboto';
+        font-style: normal;
+        font-weight: 400;
+        font-size: 12px;
+        line-height: 150%;
+        /* or 18px */
+        
+        color: #000000;
+    
+    }
+    
+    
+    }
 /* Mahammad end*/
 
 
@@ -1162,10 +1394,6 @@ h3 {
     justify-content: flex-start;
     flex-wrap: wrap;
 }
-
-
-
-
 .box1 {
     margin-right: 37px;
     margin-bottom: 41px;
@@ -1473,6 +1701,10 @@ h3 {
         font-size: 26px;
         margin-left: 34px;
     }
+    .bloklar{
+        width: 60%;
+        margin: auto;
+    }
 
     .allboxes {
         display: inline;
@@ -1547,223 +1779,55 @@ h3 {
         margin-left: 9px;
         margin-top: 14px;
     }
-}
-
-/* Tural end*/
-
-@media screen and (min-width:992px) and (max-width:1279px) {
-    .cedveller {
-        margin-left: 70px;
-        width: 524.15px;
-        height: 53.86px;
-        font-weight: 700;
-        font-size: 32px;
-        font-family: 'Roboto Slab', serif;
-    }
-
-    .box1 {
-        width: 231.09px;
-        height: 189.97px;
-        margin-right: 21px;
-        margin-bottom: 23px;
-    }
-
-    .box2 {
-        width: 231.09px;
-        height: 189.97px;
-        margin-right: 21px;
-        margin-bottom: 23px;
-    }
-
-    .box3 {
-        width: 231.09px;
-        height: 189.97px;
-        margin-right: 21px;
-        margin-bottom: 23px;
-    }
-
-    .box4 {
-        width: 231.09px;
-        height: 189.97px;
-        margin-right: 21px;
-        margin-bottom: 23px;
-    }
-
-    .box5 {
-        width: 231.09px;
-        height: 189.97px;
-        margin-right: 21px;
-        margin-bottom: 23px;
-    }
-
-    .box6 {
-        width: 231.09px;
-        height: 189.97px;
-        margin-right: 21px;
-        margin-bottom: 23px;
-    }
-
-    .box7 {
-        width: 231.09px;
-        height: 189.97px;
-        margin-right: 21px;
-        margin-bottom: 23px;
-    }
-
-    .box8 {
-        width: 231.09px;
-        height: 189.97px;
-        margin-right: 21px;
-        margin-bottom: 23px;
-    }
-
-    .allboxes img {
-        width: 231.09px;
-        height: 92.67px;
-    }
-
-    .allboxes h3 {
-        width: 211.4px;
-        height: 22.59px;
-        font-size: 17px;
-        margin-left: 11px;
-    }
-
-    .allboxes p {
-        width: 211.4px;
-        height: 36.49px;
-        font-size: 14px;
-        margin: 0;
-        margin-left: 11px;
-        margin-top: 18px;
-    }
-
     .bozhisse {
         width: 100%;
+        height: 423px;
     }
 
     .bozhisse h2 {
-        width: 571.64px;
-        height: 53.86px;
-        font-size: 32px;
-        margin-left: 70px;
+        width: 257px;
+        height: 69px;
+        font-size: 26px;
+        margin-left: 26px;
     }
 
     .bozunichi {
-        width: 458.12px;
-        height: 261.2px;
-        margin-left: 72px;
+        width: 308px;
+        height: 248px;
+        margin-left: 36px;
         padding: 0;
-        padding-top: 23px;
+        padding-top: 18px;
 
     }
 
     .bozunichi p {
-        width: 405.42px;
-        height: 117.57px;
-        margin-left: 26px;
-        margin-top: 0;
+        width: 266px;
+        height: 111.01px;
         font-size: 12px;
+        margin-left: 27px;
+        margin-top: 0;
     }
 
     .portre {
-        width: 110.04px;
-        height: 97.88px;
-        margin-left: 15px;
+        width: 80px;
+        height: auto;
+        margin-left: 18px;
     }
 
     .FB p {
-        width: 204.45px;
-        height: 34.17px;
-        font-size: 17px;
-        margin-top: 28px;
+        width: 164.49px;
+        height: 32.73px;
+        font-size: 14px;
     }
 
     .FB img {
-        width: 18.53px;
-        height: 17.95px;
+        width: 14.91px;
+        height: 17.2px;
+    }
+
+    .fotoandfacebook {
+        margin-top: 40px;
     }
 }
 
-@media screen and (min-width:320px) and (max-width:991px) {
-    .cedveller {
-        width: 421.7px;
-        height: 43.34px;
-        font-size: 26px;
-        margin-left: 34px;
-    }
-
-    .allboxes {
-        display: inline;
-
-    }
-
-    .box1 {
-        width: 185.92px;
-        height: 152.84px;
-
-    }
-
-    .box2 {
-        width: 185.92px;
-        height: 152.84px;
-
-    }
-
-    .box3 {
-        width: 185.92px;
-        height: 152.84px;
-
-    }
-
-    .box4 {
-        width: 185.92px;
-        height: 152.84px;
-
-    }
-
-    .box5 {
-        width: 185.92px;
-        height: 152.84px;
-
-    }
-
-    .box6 {
-        width: 185.92px;
-        height: 152.84px;
-
-    }
-
-    .box7 {
-        width: 185.92px;
-        height: 152.84px;
-
-    }
-
-    .box8 {
-        width: 185.92px;
-        height: 152.84px;
-
-    }
-
-    .allboxes h3 {
-        width: 170.08px;
-        height: 18.17px;
-        font-size: 14px;
-        margin-left: 9px;
-    }
-
-    .allboxes img {
-        width: 185.92px;
-        height: 74.56px;
-    }
-
-    .allboxes p {
-        width: 170.08px;
-        height: 29.36px;
-        font-size: 14px;
-        margin: 0;
-        margin-left: 9px;
-        margin-top: 14px;
-    }
-}
+/* Tural end*/
